--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="username_bg_color">#00000000</color>
+    <color name="pwd_bg_color">#00000000</color>
+    <color name="button_selector_color">#00000000</color>
 </resources>
