--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         android:layout_marginTop="25dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/app_icon"/>
+        android:src="@drawable/account_icon"/>
     <!--输入框-->
     <EditText
         android:id="@+id/et_user_name"
