第五次提交 登录+demo+web+存数据

--- a/app/src/main/res/layout/activity_heartrate.xml
+++ b/app/src/main/res/layout/activity_heartrate.xml
@@ -18,15 +18,6 @@
         android:layout_height="200dp"
         android:orientation="vertical" >
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/id_tv_heart_rate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_weight="1"
-        android:text="@string/show" >
-    </TextView>
     <TextView
         android:id="@+id/tip"
         android:layout_width="wrap_content"
@@ -35,6 +26,23 @@
         android:layout_weight="1"
         android:text="@string/show1" >
     </TextView>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_weight="1"
+        android:text="@string/show2" >
+    </TextView>
+    <TextView
+        android:id="@+id/id_tv_heart_rate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_weight="1"
+        android:text="@string/show" >
+    </TextView>
+
 
     <TextView
         android:id="@+id/id_tv_Avg_Pixel_Values"
