--- a/app/src/main/res/layout/activity_heartrate.xml
+++ b/app/src/main/res/layout/activity_heartrate.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_weight="1"
-        android:text="@string/show" >
+        android:text="0" >
     </TextView>
 
 
