--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,22 +9,45 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_bg"
     android:orientation="vertical">
-    <include layout="@layout/main_title_bar"></include><!--引入标题栏-->
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent">
+        <!--一个是显示返回键，一个是显示标题框-->
+        <!--通过TextView来显示，id ： tv_back , tv_main_title -->
+        <TextView
+            android:id="@+id/tv_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:background="@drawable/back" />
+        <TextView
+            android:id="@+id/tv_main_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"/>
+        <!--其中android:background="@drawable/go_back_selector"为点击回退键时，会变化效果，其实就是一个点击更换个图片而已。-->
+        <!--我们先用这种老方法，接下来以后的文章才做代码优化效果-->
+    </RelativeLayout>
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
-        android:src="@drawable/app_icon"/>
+        android:src="@drawable/account_icon"/>
     <!--三个编辑框-->
     <EditText
         android:id="@+id/et_user_name"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="60dp"
         android:background="@color/username_bg_color"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
@@ -33,14 +56,15 @@
         android:singleLine="true"
         android:textColor="#000000"
         android:textColorHint="#a3a3a3"
-        android:textSize="14sp"/>
+        android:textSize="40sp"/>
     <EditText
         android:id="@+id/et_psw"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_gravity="center_horizontal"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
+        android:layout_marginTop="30dp"
         android:background="@color/pwd_bg_color"
         android:drawablePadding="10dp"
         android:hint="请输入密码"
@@ -49,14 +73,15 @@
         android:singleLine="true"
         android:textColor="#000000"
         android:textColorHint="#a3a3a3"
-        android:textSize="14sp"/>
+        android:textSize="40sp"/>
     <EditText
         android:id="@+id/et_psw_again"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
+        android:layout_marginTop="30dp"
         android:background="@color/pwd_bg_color"
         android:drawablePadding="10dp"
         android:hint="请再次输入密码"
@@ -65,17 +90,17 @@
         android:singleLine="true"
         android:textColor="#000000"
         android:textColorHint="#a3a3a3"
-        android:textSize="14sp"/>
+        android:textSize="40sp"/>
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:background="@color/button_selector_color"
         android:text="注   册"
         android:textColor="@android:color/black"
-        android:textSize="18sp"/>
+        android:textSize="50sp"/>
 </LinearLayout>
