--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -12,28 +12,28 @@
 
         <TextView
             android:id="@+id/column_time"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="2"
             android:text="检测时间"
             android:gravity="center"
-            android:textSize="20sp"/>
+            android:textSize="40sp"/>
         <TextView
             android:id="@+id/column_heartrate"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="心率"
             android:gravity="center"
-            android:textSize="20sp"/>
+            android:textSize="40sp"/>
         <TextView
             android:id="@+id/column_status"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="状态"
             android:gravity="center"
-            android:textSize="20sp"/>
+            android:textSize="40sp"/>
 
     </LinearLayout>
 
