--- a/app/src/main/res/layout/records_item.xml
+++ b/app/src/main/res/layout/records_item.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_width="0dp"
+        android:layout_height="85dp"
         android:layout_marginLeft="10dp"
-        android:textSize="15sp"
-        android:gravity="left"/>
+        android:layout_weight="2"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/heartrate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="85dp"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:textSize="15sp"
+        android:textSize="20sp"
+        android:layout_gravity="center"
         android:gravity="center"/>
 
     <TextView
         android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="85dp"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:textSize="15sp"
+        android:textSize="20sp"
+        android:layout_gravity="center"
         android:gravity="center"/>
 </LinearLayout>
