--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -25,6 +25,11 @@
             android:layout_height="wrap_content"
             android:text="关闭通知"/>
 
+        <Button
+            android:id="@+id/logOut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="退出登录"/>
     </LinearLayout>
 
 </FrameLayout>
