--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#F1806C</color>
+    <color name="colorPrimaryDark">#F1634A</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="username_bg_color">#00000000</color>
     <color name="pwd_bg_color">#00000000</color>
